--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^2.2.19
 
+flutter_native_splash:
+  fullScreen: true
+  background_image: assets/images/Splash_image.png
+  android_12:
+    fullScreen: true
+    image: assets/images/Splash_image.png
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
