--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
   assets:
      - assets/images/splash_icon.png
      - assets/images/logo.png
+     - assets/images/ahadu.png
   #   - images/a_dot_ham.jpeg
   fonts:
     - family: Inter
