--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
+  http: ^0.13.5
+  flutter_spinkit: ^5.1.0
+  flutter_secure_storage: ^8.0.0
 
 
 dev_dependencies:
@@ -45,8 +50,10 @@ dev_dependencies:
 flutter_native_splash:
   fullScreen: true
   background_image: assets/images/Splash_icon.png
+  color: "#ffffff"
   android_12:
     fullScreen: true
+    color: "#ffffff"
     image: assets/images/Splash_icon.png
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -71,6 +78,7 @@ flutter:
      - assets/images/splash_icon.png
      - assets/images/logo.png
      - assets/images/ahadu.png
+     - assets/images/user.jpg
   #   - images/a_dot_ham.jpeg
   fonts:
     - family: Inter
