--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,11 +38,19 @@ dependencies:
   flutter_bloc: ^8.1.1
   equatable: ^2.0.5
   http: ^0.13.5
+  flutter_svg: ^2.0.4
   flutter_spinkit: ^5.1.0
   flutter_secure_storage: ^8.0.0
   file_picker: ^5.2.6
   syncfusion_flutter_datagrid: ^21.1.35
   shimmer: ^2.0.0
+  dropdown_textfield: ^1.0.8
+  awesome_dialog: ^3.0.2
+  image_picker: ^0.8.7+4
+  shared_preferences: ^2.1.0
+  intl: ^0.18.1
+  currency_text_input_formatter: ^2.1.9
+  flutter_multi_formatter: ^2.10.2
 
 
 
@@ -79,10 +87,17 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+     - assets/svgs/onboarding-01.svg
+     - assets/svgs/onboarding-02.svg
+     - assets/svgs/onboarding-03.svg
      - assets/images/splash_icon.png
      - assets/images/logo.png
      - assets/images/ahadu.png
      - assets/images/user.jpg
+     - assets/images/intro_1.jpg
+     - assets/images/intro_2.jpeg
+     - assets/images/intro_3.jpeg
+     - assets/images/intro_4.jpeg
   #   - images/a_dot_ham.jpeg
   fonts:
     - family: Inter
