--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.18.1
   currency_text_input_formatter: ^2.1.9
   flutter_multi_formatter: ^2.10.2
+  font_awesome_flutter: ^10.4.0
 
 
 
