--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   currency_text_input_formatter: ^2.1.9
   flutter_multi_formatter: ^2.10.2
   font_awesome_flutter: ^10.4.0
+  lottie: ^2.3.2
 
 
 
@@ -101,6 +102,7 @@ flutter:
      - assets/images/intro_4.jpeg
      - assets/images/collaterals.png
      - assets/images/buildings.png
+     - assets/animations/success.json
 
   #   - images/a_dot_ham.jpeg
   fonts:
